exports[`test renders correctly as item 1 1`] = `
<div
  className="sc-bwzfXH dYNPKz">
  <textarea
    className="sc-bdVaJa iYLCcn"
    onChange={[Function]}
    value="background: red;" />
  <div
    className="sc-htpNat iUgnEl">
    <div
      className="sc-bxivhb fEzLwQ">
      1
    </div>
  </div>
</div>
`;

exports[`test renders correctly as item 2 1`] = `
<div
  className="sc-bwzfXH dYNPKz">
  <textarea
    className="sc-bdVaJa iYLCcn"
    onChange={[Function]}
    value="background: red;" />
  <div
    className="sc-htpNat iUgnEl">
    <div
      className="sc-bxivhb fEzLwQ">
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item with auto hide 1`] = `
<div
  className="sc-bwzfXH gFkNNC">
  <textarea
    className="sc-bdVaJa iYLCcn"
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl">
    <div
      className="sc-bxivhb fEzLwQ">
      2
    </div>
  </div>
</div>
`;

exports[`test renders grid item without auto hide 1`] = `
<div
  className="sc-bwzfXH gFkNNC">
  <textarea
    className="sc-bdVaJa iYLCcn"
    onChange={[Function]}
    value="" />
  <div
    className="sc-htpNat iUgnEl">
    <div
      className="sc-bxivhb fEzLwQ">
      2
    </div>
  </div>
</div>
`;
